@@ -56,9 +56,38 @@ public interface Stream2StreamAO extends IRODSAccessObject {
 	void streamToStreamCopy(InputStream inputStream, OutputStream outputStream)
 			throws JargonException;
 
+
 	void transferStreamToFile(InputStream inputStream, File targetFile,
 			long length, long readBuffSize) throws JargonException;
 
+	/**
+	 * Transfer the contents of a stream to a given file. Note that this method
+	 * will detect if the target file is an <code>IRODSFile</code>, and in that
+	 * case, it will properly handle the transfer via iRODS.
+	 * <p/>
+	 * Transfers are done in this method by doing a normal copy between java.io
+	 * streams.
+	 * <p/>
+	 * This method will close the input and output streams as part of normal
+	 * operations, and will attempt to do connection re-routing for iRODS files
+	 * if so specified in the jargon properties.
+	 * 
+	 * @param inputStream
+	 *            {@link InputStream} for the transfer, note that this method
+	 *            does not wrap the stream with any buffering, so a properly
+	 *            buffered stream should be provided based on needs.
+	 * @param targetFile
+	 *            {@link File} that will be the target for the stream transfer.
+	 *            If the <code>targetFile</code> is an instance of
+	 *            {@link IRODSFile}, the transfer will be done using iRODS
+	 *            protocols to iRODS.
+	 * @param length
+	 *            <code>long</code> with the length of the source stream
+	 * @param readBuffSize
+	 *            <code>int</code> with the buffer size used for the transfer.
+	 *            Setting to 0 will cause the default buffer size to be used.
+	 * @throws JargonException
+	 */
 	void transferStreamToFileUsingIOStreams(InputStream inputStream,
 			File targetFile, long length, int readBuffSize)
 			throws JargonException;
