@@ -65,6 +65,8 @@ Note that the following bug and feature requests are logged in GForge with relat
 [#535] shopping cart capability in idrop web and idrop lite
 	*Added package to data utils for shopping cart maintenance, serialization, de-serialization
 [#578] Temp password as another user
+[#574] Added more capable Stream2Stream copy for input stream to target file, supporting iRODS file with jargon properties
+support and connection re-routing capability automatically.
 
 
  
